ic/vendor/libsignal-protocol-sys/libsignal-protocol-c/src/signal_protocol.h

typedef struct signal_crypto_provider {
    int (*random_func)(uint8_t *data, size_t len, void *user_data);
    int (*hmac_sha256_init_func)(void **hmac_context, const uint8_t *key, size_t key_len, void *user_data);
    int (*hmac_sha256_update_func)(void *hmac_context, const uint8_t *data, size_t data_len, void *user_data);
    int (*hmac_sha256_final_func)(void *hmac_context, signal_buffer **output, void *user_data);
    void (*hmac_sha256_cleanup_func)(void *hmac_context, void *user_data);
    int (*sha512_digest_init_func)(void **digest_context, void *user_data);
    int (*sha512_digest_update_func)(void *digest_context, const uint8_t *data, size_t data_len, void *user_data);
    int (*sha512_digest_final_func)(void *digest_context, signal_buffer **output, void *user_data);
    void (*sha512_digest_cleanup_func)(void *digest_context, void *user_data);
    int (*encrypt_func)(signal_buffer **output,
            int cipher,
            const uint8_t *key, size_t key_len,
            const uint8_t *iv, size_t iv_len,
            const uint8_t *plaintext, size_t plaintext_len,
            void *user_data);
    int (*decrypt_func)(signal_buffer **output,
            int cipher,
            const uint8_t *key, size_t key_len,
            const uint8_t *iv, size_t iv_len,
            const uint8_t *ciphertext, size_t ciphertext_len,
            void *user_data);
    void *user_data;
} signal_crypto_provider;
typedef struct signal_protocol_session_store {
    int (*load_session_func)(signal_buffer **record, signal_buffer **user_record, const signal_protocol_address *address, void *user_data);
    int (*get_sub_device_sessions_func)(signal_int_list **sessions, const char *name, size_t name_len, void *user_data);
    int (*store_session_func)(const signal_protocol_address *address, uint8_t *record, size_t record_len, uint8_t *user_record, size_t user_record_len, void *user_data);
    int (*contains_session_func)(const signal_protocol_address *address, void *user_data);
    int (*delete_session_func)(const signal_protocol_address *address, void *user_data);
    int (*delete_all_sessions_func)(const char *name, size_t name_len, void *user_data);
    void (*destroy_func)(void *user_data);
    void *user_data;
} signal_protocol_session_store;
typedef struct signal_protocol_pre_key_store {
    int (*load_pre_key)(signal_buffer **record, uint32_t pre_key_id, void *user_data);
    int (*store_pre_key)(uint32_t pre_key_id, uint8_t *record, size_t record_len, void *user_data);
    int (*contains_pre_key)(uint32_t pre_key_id, void *user_data);
    int (*remove_pre_key)(uint32_t pre_key_id, void *user_data);
    void (*destroy_func)(void *user_data);
    void *user_data;
} signal_protocol_pre_key_store;
typedef struct signal_protocol_signed_pre_key_store {
    int (*load_signed_pre_key)(signal_buffer **record, uint32_t signed_pre_key_id, void *user_data);
    int (*store_signed_pre_key)(uint32_t signed_pre_key_id, uint8_t *record, size_t record_len, void *user_data);
    int (*contains_signed_pre_key)(uint32_t signed_pre_key_id, void *user_data);
    int (*remove_signed_pre_key)(uint32_t signed_pre_key_id, void *user_data);
    void (*destroy_func)(void *user_data);
    void *user_data;
} signal_protocol_signed_pre_key_store;
typedef struct signal_protocol_identity_key_store {
    int (*get_identity_key_pair)(signal_buffer **public_data, signal_buffer **private_data, void *user_data);
    int (*get_local_registration_id)(void *user_data, uint32_t *registration_id);
    int (*save_identity)(const signal_protocol_address *address, uint8_t *key_data, size_t key_len, void *user_data);
    int (*is_trusted_identity)(const signal_protocol_address *address, uint8_t *key_data, size_t key_len, void *user_data);
    void (*destroy_func)(void *user_data);
    void *user_data;
} signal_protocol_identity_key_store;
typedef struct signal_protocol_sender_key_store {
    int (*store_sender_key)(const signal_protocol_sender_key_name *sender_key_name, uint8_t *record, size_t record_len, uint8_t *user_record, size_t user_record_len, void *user_data);
    int (*load_sender_key)(signal_buffer **record, signal_buffer **user_record, const signal_protocol_sender_key_name *sender_key_name, void *user_data);
    void (*destroy_func)(void *user_data);
    void *user_data;
} signal_protocol_sender_key_store;
int signal_context_create(signal_context **context, void *user_data);
int signal_context_set_crypto_provider(signal_context *context, const signal_crypto_provider *crypto_provider);
int signal_context_set_locking_functions(signal_context *context,
        void (*lock)(void *user_data), void (*unlock)(void *user_data));
int signal_context_set_log_function(signal_context *context,
        void (*log)(int level, const char *message, size_t len, void *user_data));
void signal_context_destroy(signal_context *context);
int signal_protocol_store_context_create(signal_protocol_store_context **context, signal_context *global_context);
int signal_protocol_store_context_set_session_store(signal_protocol_store_context *context, const signal_protocol_session_store *store);
int signal_protocol_store_context_set_pre_key_store(signal_protocol_store_context *context, const signal_protocol_pre_key_store *store);
int signal_protocol_store_context_set_signed_pre_key_store(signal_protocol_store_context *context, const signal_protocol_signed_pre_key_store *store);
int signal_protocol_store_context_set_identity_key_store(signal_protocol_store_context *context, const signal_protocol_identity_key_store *store);
int signal_protocol_store_context_set_sender_key_store(signal_protocol_store_context *context, const signal_protocol_sender_key_store *store);
void signal_protocol_store_context_destroy(signal_protocol_store_context *context);
int signal_protocol_session_load_session(signal_protocol_store_context *context, session_record **record, const signal_protocol_address *address);
int signal_protocol_session_get_sub_device_sessions(signal_protocol_store_context *context, signal_int_list **sessions, const char *name, size_t name_len);
int signal_protocol_session_store_session(signal_protocol_store_context *context, const signal_protocol_address *address, session_record *record);
int signal_protocol_session_contains_session(signal_protocol_store_context *context, const signal_protocol_address *address);
int signal_protocol_session_delete_session(signal_protocol_store_context *context, const signal_protocol_address *address);
int signal_protocol_session_delete_all_sessions(signal_protocol_store_context *context, const char *name, size_t name_len);
int signal_protocol_pre_key_load_key(signal_protocol_store_context *context, session_pre_key **pre_key, uint32_t pre_key_id);
int signal_protocol_pre_key_store_key(signal_protocol_store_context *context, session_pre_key *pre_key);
int signal_protocol_pre_key_contains_key(signal_protocol_store_context *context, uint32_t pre_key_id);
int signal_protocol_pre_key_remove_key(signal_protocol_store_context *context, uint32_t pre_key_id);
int signal_protocol_signed_pre_key_load_key(signal_protocol_store_context *context, session_signed_pre_key **pre_key, uint32_t signed_pre_key_id);
int signal_protocol_signed_pre_key_store_key(signal_protocol_store_context *context, session_signed_pre_key *pre_key);
int signal_protocol_signed_pre_key_contains_key(signal_protocol_store_context *context, uint32_t signed_pre_key_id);
int signal_protocol_signed_pre_key_remove_key(signal_protocol_store_context *context, uint32_t signed_pre_key_id);
int signal_protocol_identity_get_key_pair(signal_protocol_store_context *context, ratchet_identity_key_pair **key_pair);
int signal_protocol_identity_get_local_registration_id(signal_protocol_store_context *context, uint32_t *registration_id);
int signal_protocol_identity_save_identity(signal_protocol_store_context *context, const signal_protocol_address *address, ec_public_key *identity_key);
int signal_protocol_identity_is_trusted_identity(signal_protocol_store_context *context, const signal_protocol_address *address, ec_public_key *identity_key);
int signal_protocol_sender_key_store_key(signal_protocol_store_context *context, const signal_protocol_sender_key_name *sender_key_name, sender_key_record *record);
int signal_protocol_sender_key_load_key(signal_protocol_store_context *context, sender_key_record **record, const signal_protocol_sender_key_name *sender_key_name);