ic/vendor/libsignal-protocol-sys/libsignal-protocol-c/src/protocol.h

int ciphertext_message_get_type(const ciphertext_message *message);
signal_buffer *ciphertext_message_get_serialized(const ciphertext_message *message);
int signal_message_create(signal_message **message, uint8_t message_version,
        const uint8_t *mac_key, size_t mac_key_len,
        ec_public_key *sender_ratchet_key, uint32_t counter, uint32_t previous_counter,
        const uint8_t *ciphertext, size_t ciphertext_len,
        ec_public_key *sender_identity_key, ec_public_key *receiver_identity_key,
        signal_context *global_context);
int signal_message_deserialize(signal_message **message, const uint8_t *data, size_t len,
        signal_context *global_context);
int signal_message_copy(signal_message **message, signal_message *other_message, signal_context *global_context);