ic/vendor/libsignal-protocol-sys/bindings.rs

#[test]
fn bindgen_test_layout_signal_protocol_sender_key_store() {
    assert_eq!(
        ::std::mem::size_of::<signal_protocol_sender_key_store>(),
        32usize,
        concat!("Size of: ", stringify!(signal_protocol_sender_key_store))
    );
    assert_eq!(
        ::std::mem::align_of::<signal_protocol_sender_key_store>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(signal_protocol_sender_key_store)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<signal_protocol_sender_key_store>()))
                .store_sender_key as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(signal_protocol_sender_key_store),
            "::",
            stringify!(store_sender_key)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<signal_protocol_sender_key_store>()))
                .load_sender_key as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(signal_protocol_sender_key_store),
            "::",
            stringify!(load_sender_key)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<signal_protocol_sender_key_store>()))
                .destroy_func as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(signal_protocol_sender_key_store),
            "::",
            stringify!(destroy_func)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<signal_protocol_sender_key_store>()))
                .user_data as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(signal_protocol_sender_key_store),
            "::",
            stringify!(user_data)
        )
    );
}
extern "C" {
    /// Create a new instance of the global library context.
    pub fn signal_context_create(
        context: *mut *mut signal_context,
        user_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Set the crypto provider to be used by the Signal Protocol library.
    ///
    /// @param crypto_provider Populated structure of crypto provider function
    ///     pointers. The contents of this structure are copied, so the caller
    ///     does not need to maintain its instance.
    /// @return 0 on success, negative on failure
    pub fn signal_context_set_crypto_provider(
        context: *mut signal_context,
        crypto_provider: *const signal_crypto_provider,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Set the locking functions to be used by the Signal Protocol library for
    /// synchronization.
    ///
    /// Note: These functions must allow recursive locking (e.g.
    /// PTHREAD_MUTEX_RECURSIVE)
    ///
    /// @param lock function to lock a mutex
    /// @param unlock function to unlock a mutex
    /// @return 0 on success, negative on failure
    pub fn signal_context_set_locking_functions(
        context: *mut signal_context,
        lock: ::std::option::Option<
            unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void),
        >,
        unlock: ::std::option::Option<
            unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void),
        >,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Set the log function to be used by the Signal Protocol library for
    /// logging.
    ///
    /// @return 0 on success, negative on failure
    pub fn signal_context_set_log_function(
        context: *mut signal_context,
        log: ::std::option::Option<
            unsafe extern "C" fn(
                level: ::std::os::raw::c_int,
                message: *const ::std::os::raw::c_char,
                len: usize,
                user_data: *mut ::std::os::raw::c_void,
            ),
        >,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_context_destroy(context: *mut signal_context);
}
extern "C" {
    /// Create a new instance of the Signal Protocol data store interface.
    pub fn signal_protocol_store_context_create(
        context: *mut *mut signal_protocol_store_context,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_store_context_set_session_store(
        context: *mut signal_protocol_store_context,
        store: *const signal_protocol_session_store,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_store_context_set_pre_key_store(
        context: *mut signal_protocol_store_context,
        store: *const signal_protocol_pre_key_store,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_store_context_set_signed_pre_key_store(
        context: *mut signal_protocol_store_context,
        store: *const signal_protocol_signed_pre_key_store,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_store_context_set_identity_key_store(
        context: *mut signal_protocol_store_context,
        store: *const signal_protocol_identity_key_store,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_store_context_set_sender_key_store(
        context: *mut signal_protocol_store_context,
        store: *const signal_protocol_sender_key_store,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_store_context_destroy(
        context: *mut signal_protocol_store_context,
    );
}
extern "C" {
    pub fn signal_protocol_session_load_session(
        context: *mut signal_protocol_store_context,
        record: *mut *mut session_record,
        address: *const signal_protocol_address,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_session_get_sub_device_sessions(
        context: *mut signal_protocol_store_context,
        sessions: *mut *mut signal_int_list,
        name: *const ::std::os::raw::c_char,
        name_len: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_session_store_session(
        context: *mut signal_protocol_store_context,
        address: *const signal_protocol_address,
        record: *mut session_record,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_session_contains_session(
        context: *mut signal_protocol_store_context,
        address: *const signal_protocol_address,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_session_delete_session(
        context: *mut signal_protocol_store_context,
        address: *const signal_protocol_address,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_session_delete_all_sessions(
        context: *mut signal_protocol_store_context,
        name: *const ::std::os::raw::c_char,
        name_len: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_pre_key_load_key(
        context: *mut signal_protocol_store_context,
        pre_key: *mut *mut session_pre_key,
        pre_key_id: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_pre_key_store_key(
        context: *mut signal_protocol_store_context,
        pre_key: *mut session_pre_key,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_pre_key_contains_key(
        context: *mut signal_protocol_store_context,
        pre_key_id: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_pre_key_remove_key(
        context: *mut signal_protocol_store_context,
        pre_key_id: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_signed_pre_key_load_key(
        context: *mut signal_protocol_store_context,
        pre_key: *mut *mut session_signed_pre_key,
        signed_pre_key_id: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_signed_pre_key_store_key(
        context: *mut signal_protocol_store_context,
        pre_key: *mut session_signed_pre_key,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_signed_pre_key_contains_key(
        context: *mut signal_protocol_store_context,
        signed_pre_key_id: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_signed_pre_key_remove_key(
        context: *mut signal_protocol_store_context,
        signed_pre_key_id: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_identity_get_key_pair(
        context: *mut signal_protocol_store_context,
        key_pair: *mut *mut ratchet_identity_key_pair,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_identity_get_local_registration_id(
        context: *mut signal_protocol_store_context,
        registration_id: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_identity_save_identity(
        context: *mut signal_protocol_store_context,
        address: *const signal_protocol_address,
        identity_key: *mut ec_public_key,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_identity_is_trusted_identity(
        context: *mut signal_protocol_store_context,
        address: *const signal_protocol_address,
        identity_key: *mut ec_public_key,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_sender_key_store_key(
        context: *mut signal_protocol_store_context,
        sender_key_name: *const signal_protocol_sender_key_name,
        record: *mut sender_key_record,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_protocol_sender_key_load_key(
        context: *mut signal_protocol_store_context,
        record: *mut *mut sender_key_record,
        sender_key_name: *const signal_protocol_sender_key_name,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn hkdf_create(
        context: *mut *mut hkdf_context,
        message_version: ::std::os::raw::c_int,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn hkdf_derive_secrets(
        context: *mut hkdf_context,
        output: *mut *mut u8,
        input_key_material: *const u8,
        input_key_material_len: usize,
        salt: *const u8,
        salt_len: usize,
        info: *const u8,
        info_len: usize,
        output_len: usize,
    ) -> isize;
}
extern "C" {
    pub fn hkdf_compare(
        context1: *const hkdf_context,
        context2: *const hkdf_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn hkdf_destroy(type_: *mut signal_type_base);
}
extern "C" {
    pub fn ciphertext_message_get_type(
        message: *const ciphertext_message,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ciphertext_message_get_serialized(
        message: *const ciphertext_message,
    ) -> *mut signal_buffer;
}
extern "C" {
    pub fn signal_message_create(
        message: *mut *mut signal_message,
        message_version: u8,
        mac_key: *const u8,
        mac_key_len: usize,
        sender_ratchet_key: *mut ec_public_key,
        counter: u32,
        previous_counter: u32,
        ciphertext: *const u8,
        ciphertext_len: usize,
        sender_identity_key: *mut ec_public_key,
        receiver_identity_key: *mut ec_public_key,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_message_deserialize(
        message: *mut *mut signal_message,
        data: *const u8,
        len: usize,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_message_copy(
        message: *mut *mut signal_message,
        other_message: *mut signal_message,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
